<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="5dp"
    app:cardCornerRadius="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="4dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_info"
            android:textSize="25sp"
            android:textColor="@color/colorBlue"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_margin="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@android:color/holo_blue_dark"
                android:layout_weight="3.1"
                android:text="@string/source"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_weight="1"
                android:textColor="@android:color/holo_green_dark"
                android:text="@string/sources"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@android:color/holo_blue_dark"
                android:layout_weight="3.1"
                android:text="@string/dev"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_weight="1"
                android:textColor="@android:color/holo_green_dark"
                android:text="@string/dev_name"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@android:color/holo_blue_dark"
                android:layout_weight="3.1"
                android:text="@string/email"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_weight="1"
                android:textColor="@android:color/holo_green_dark"
                android:text="@string/dev_email"/>
        </LinearLayout>
        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ok"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>